tests/negative/gold/shadow6_test.gold
tests/negative/shadow6_test.toit:8:3: error: Definition of 'global' shadows global variable
  global := 0
  ^~~~~~
tests/negative/shadow6_test.toit:5:1: note: Global definition of 'global'
global := 499
^~~~~~
Compilation failed.
